# plotbase-mcp

./: .gitignore  LICENSE  PlotBase_MCP_微信公众号文章.docx  README.md  build_wechat_doc.py  database.json  generate_plots.py  pyproject.toml  server.py  test_server.py
